--- a/kubernetes/apps/monitoring/kubernetes-dashboard/app/ingress.yaml
+++ b/kubernetes/apps/monitoring/kubernetes-dashboard/app/ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: kubernetes-dashboard
-  namespace: default
+  namespace: monitoring
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
@@ -24,4 +24,4 @@ spec:
               service:
                 name: kubernetes-dashboard
                 port:
-                  number: 443
+                  number: 9090
