--- a/kubernetes/apps/monitoring/kubernetes-dashboard/app/ingress.yaml
+++ b/kubernetes/apps/monitoring/kubernetes-dashboard/app/ingress.yaml
@@ -23,5 +23,5 @@ spec:
             backend:
               service:
                 name: kubernetes-dashboard
-                port:
-                  number: 9090
+                # port:
+                #   number: 9090
