middleware middlewares label fix

--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox.yaml
@@ -23,6 +23,35 @@ spec:
   tls:
     secretName: "proxmox-${SECRET_DOMAIN/./-}-tls"
 ---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: proxmox
+  namespace: default
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
+    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middlewares-authentik@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
+spec:
+  ingressClassName: "traefik"
+  tls:
+    - hosts:
+        - "proxmox.${SECRET_DOMAIN}"
+      secretName: "hajimari-tls"
+  rules:
+    - host: "hajimari.${SECRET_DOMAIN}"
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: proxmox
+                port:
+                  number: 8006
+
+---
 apiVersion: traefik.containo.us/v1alpha1
 kind: ServersTransport
 metadata:
