--- a/kubernetes/apps/networking/traefik/add-ons/external-services/kustomization.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/kustomization.yaml
@@ -2,6 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: networking
-# resources:
-#   # - proxmox2.yaml
-#   # - plex2.yaml
+resources:
+  # - proxmox2.yaml
+  # - plex2.yaml
