--- a/kubernetes/apps/networking/traefik/add-ons/external-services/plex.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/plex.yaml
@@ -1,58 +1,72 @@
 ---
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
   name: plex
   namespace: networking
-  labels:
-    app.kubernetes.io/name: plex
+  annotations:
+    coredns.io/hostname: "plex.${SECRET_DOMAIN}"
+    cert-manager.io/cluster-issuer: letsencrypt-production
+    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    traefik.ingress.kubernetes.io/router.middlewares: networking-chain-authentik-plex@kubernetescrd
 spec:
-  entryPoints:
-    - websecure
-  routes:
-    - kind: Rule
-      match: Host(`plex.${SECRET_DOMAIN}`)
-      services:
-        - name: plex
-          port: 32400
-          namespace: networking
-          serversTransport: plex
-          passHostHeader: true
-      # middlewares:
-      #   - name: traefik-middleware-chains-default
-      #     namespace: networking
+  ingressClassName: traefik
+  rules:
+    - host: &host "plex.${SECRET_DOMAIN}"
+      http:
+        paths:
+          - backend:
+              service:
+                name: plex
+                port:
+                  number: 80
+            path: /
+            pathType: Prefix
   tls:
-    secretName: "plex-${SECRET_DOMAIN/./-}-tls"
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: ServersTransport
-metadata:
-  name: plex
-  labels:
-    app.kubernetes.io/name: plex
-spec:
-  insecureSkipVerify: true
+    - hosts:
+        - *host
+      secretName: "plex-${SECRET_DOMAIN/./-}-tls"
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: plex
+  namespace: networking
 spec:
   ports:
-    - name: https
+    - port: 80
       protocol: TCP
-      port: 32400
-      targetPort: https
-  type: ClusterIP
+      targetPort: 32400
 ---
 apiVersion: v1
 kind: Endpoints
 metadata:
   name: plex
+  namespace: networking
 subsets:
   - addresses:
       - ip: ${PLEX_ADDR}
     ports:
-      - name: https
-        port: 32400
-        protocol: TCP
+      - port: 32400
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: middlewares-plex-addprefix
+  namespace: networking
+spec:
+  addPrefix:
+    prefix: "/web"
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: chain-authentik-plex
+  namespace: networking
+spec:
+  chain:
+    middlewares:
+      - name: middlewares-rate-limit
+      - name: middlewares-plex-addprefix
+      - name: middlewares-secure-headers
+      - name: traefik-middlewares-authentik
