middleware middlewares label fix

--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox.yaml
@@ -45,6 +45,6 @@ metadata:
   namespace: networking
 subsets:
   - addresses:
-      - ip: ${PROXMOX_ADDR}}
+      - ip: ${PROXMOX_ADDR}
     ports:
       - port: 8006
