--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -1,5 +1,4 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/helmrelease_v2beta1.json
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -31,82 +30,28 @@ spec:
   values:
     cleanPrometheusOperatorObjectNames: true
     alertmanager:
+      enabled: true
       config:
         global:
           resolve_timeout: 5m
-        receivers:
-          - name: "null" # quote
-          - name: pushover
-            pushover_configs:
-              - url_title: View in Alert Manager
-                token: "{{ .Values.alertmanager.secrets.pushover_token }}"
-                user_key: "{{ .Values.alertmanager.secrets.pushover_user_key }}"
-                send_resolved: true
-                html: true
-                sound: gamelan
-                priority: |-
-                  {{- `
-                    {{ if eq .Status "firing" }}1{{ else }}0{{ end }}
-                  `}}
-                title: |-
-                  {{- `
-                    [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ .CommonLabels.alertname }}
-                  `}}
-                message: |-
-                  {{- `
-                    {{- range .Alerts }}
-                      {{- if ne .Labels.severity "" }}
-                        <b>Severity:</b> <i>{{ .Labels.severity }}</i>
-                      {{- else }}
-                        <b>Severity:</b> <i>N/A</i>
-                      {{- end }}
-                      {{- if ne .Annotations.description "" }}
-                        <b>Description:</b> <i>{{ .Annotations.description }}</i>
-                      {{- else if ne .Annotations.summary "" }}
-                        <b>Summary:</b> <i>{{ .Annotations.summary }}</i>
-                      {{- else if ne .Annotations.message "" }}
-                        <b>Message:</b> <i>{{ .Annotations.message }}</i>
-                      {{- else }}
-                        <b>Description:</b> <i>N/A</i>
-                      {{- end }}
-                      {{- if gt (len .Labels.SortedPairs) 0 }}
-                        <b>Details:</b>
-                        {{- range .Labels.SortedPairs }}
-                          • <b>{{ .Name }}:</b> <i>{{ .Value }}</i>
-                        {{- end }}
-                      {{- end }}
-                    {{- end }}
-                  `}}
-        route:
-          group_by: ["alertname", "job"]
-          group_wait: 30s
-          group_interval: 5m
-          repeat_interval: 6h
-          receiver: pushover
-          routes:
-            - receiver: "null" # quote
-              matchers: ["alertname =~ 'InfoInhibitor|Watchdog'"]
-            - receiver: pushover
-              matchers: ["severity = 'critical'"]
-              continue: true
-        inhibit_rules:
-          - source_matchers: ["severity = 'critical'"]
-            target_matchers: ["severity = 'warning'"]
-            equal: ["alertname", "namespace"]
+
       ingress:
         enabled: true
         pathType: Prefix
-        ingressClassName: nginx
+        ingressClassName: traefik
         annotations:
           hajimari.io/appName: "Alert Manager"
           hajimari.io/icon: mdi:alert-decagram-outline
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         hosts:
-          - &host alert-manager.devbu.io
+          - "alerts.${SECRET_DOMAIN}"
         tls:
           - hosts:
-              - *host
+              - "alerts.${SECRET_DOMAIN}"
+            secretName: "alerts.${SECRET_DOMAIN}"
       alertmanagerSpec:
-        replicas: 3
+        replicas: 1
         podAntiAffinity: hard
         storage:
           volumeClaimTemplate:
@@ -131,64 +76,36 @@ spec:
       forceDeployDashboards: true
       sidecar:
         dashboards:
-          multicluster:
-            etcd:
-              enabled: true
-    kubelet:
-      enabled: true
-      serviceMonitor:
-        metricRelabelings:
-          - action: replace
-            sourceLabels: ["node"]
-            targetLabel: instance
-    kubeApiServer:
-      enabled: true
-    kubeControllerManager:
-      enabled: true
-      endpoints: ["192.168.42.10", "192.168.42.11", "192.168.42.12"]
-    kubeScheduler:
-      enabled: true
-      endpoints: ["192.168.42.10", "192.168.42.11", "192.168.42.12"]
-    kubeProxy:
-      enabled: true
-      endpoints: ["192.168.42.10", "192.168.42.11", "192.168.42.12"]
-    kubeEtcd:
-      enabled: true
-      endpoints: ["192.168.42.10", "192.168.42.11", "192.168.42.12"]
-      service:
-        enabled: true
-        port: 2381
-        targetPort: 2381
+          enabled: true
+          label: grafana_dashboard
+          labelValue: "1"
+
     prometheus:
       ingress:
         enabled: true
-        ingressClassName: nginx
+        ingressClassName: traefik
         annotations:
           hajimari.io/appName: Prometheus
           hajimari.io/icon: simple-icons:prometheus
-        pathType: Prefix
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
         hosts:
-          - &host prometheus.devbu.io
+          - "prom.${SECRET_DOMAIN}"
+        path: /
+        pathType: Prefix
         tls:
           - hosts:
-              - *host
+              - "prom.${SECRET_DOMAIN}"
+            secretName: "prom.${SECRET_DOMAIN}"
+
       thanosService:
         enabled: true
       thanosServiceMonitor:
         enabled: true
       prometheusSpec:
-        replicas: 3
+        replicas: 1
         replicaExternalLabelName: __replica__
         externalLabels:
           cluster: home-ops
-        thanos:
-          image: quay.io/thanos/thanos:v0.30.1
-          # renovate: datasource=docker depName=quay.io/thanos/thanos
-          version: "v0.30.1"
-          objectStorageConfig:
-            name: thanos-objstore-secret
-            key: objstore.yml
-        podAntiAffinity: hard
         ruleSelectorNilUsesHelmValues: false
         serviceMonitorSelectorNilUsesHelmValues: false
         podMonitorSelectorNilUsesHelmValues: false
@@ -203,72 +120,10 @@ spec:
               storageClassName: local-path
               resources:
                 requests:
-                  storage: 20Gi
+                  storage: 5Gi
         resources:
           requests:
             cpu: 10m
             memory: 2000Mi
           limits:
-            memory: 8000Mi
-        additionalScrapeConfigs:
-          - job_name: haproxy
-            scrape_interval: 1m
-            scrape_timeout: 10s
-            honor_timestamps: true
-            static_configs:
-              - targets: ["opnsense.turbo.ac:8404"]
-          - job_name: coredns
-            scrape_interval: 1m
-            scrape_timeout: 10s
-            honor_timestamps: true
-            static_configs:
-              - targets: ["opnsense.turbo.ac:9153"]
-          - job_name: frr-exporter
-            scrape_interval: 1m
-            scrape_timeout: 10s
-            honor_timestamps: true
-            static_configs:
-              - targets: ["opnsense.turbo.ac:9342"]
-          - job_name: node-exporter
-            scrape_interval: 1m
-            scrape_timeout: 10s
-            honor_timestamps: true
-            static_configs:
-              - targets:
-                  - expanse.turbo.ac:9100
-                  - opnsense.turbo.ac:9100
-                  - pikvm.turbo.ac:9100
-          - job_name: smartctl-exporter
-            scrape_interval: 1m
-            scrape_timeout: 10s
-            honor_timestamps: true
-            static_configs:
-              - targets: ["expanse.turbo.ac:9633"]
-          - job_name: pikvm
-            scrape_interval: 1m
-            scrape_timeout: 10s
-            metrics_path: /api/export/prometheus/metrics
-            basic_auth:
-              username: admin
-              password: 1NtERnALOnLYuS3
-            honor_timestamps: true
-            static_configs:
-              - targets: ["pikvm.turbo.ac"]
-          - job_name: nexus
-            scrape_interval: 1m
-            scrape_timeout: 10s
-            metrics_path: /service/metrics/prometheus
-            basic_auth:
-              username: admin
-              password: 1NtERnALOnLYuS3
-            static_configs:
-              - targets: ["nexus.turbo.ac"]
-  valuesFrom:
-    - targetPath: alertmanager.secrets.pushover_user_key
-      kind: Secret
-      name: alertmanager-secret
-      valuesKey: pushover_user_key
-    - targetPath: alertmanager.secrets.pushover_token
-      kind: Secret
-      name: alertmanager-secret
-      valuesKey: pushover_token
+            memory: 4000Mi
