--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -4,20 +4,21 @@ kind: Kustomization
 resources:
   - ./authelia.yaml
   - ./authentik.yaml
+  - ./csi-driver-nfs.yaml
   - ./bitnami.yaml
   - ./bjw-s.yaml
   - ./external-dns.yaml
+  - ./grafana.yaml
   - ./hajimari.yaml
   - ./ingress-nginx.yaml
   - ./jetstack.yaml
+  - ./k8s-at-home.yaml
   - ./k8s-gateway.yaml
+  - ./kubernetes-dashboard.yaml
   - ./metallb.yaml
   - ./metrics-server.yaml
+  - ./nfs-subdir-external-provisioner.yaml
+  - ./prometheus-community.yaml
   - ./stakater.yaml
   - ./weave-gitops.yaml
-  - ./nfs-subdir-external-provisioner.yaml
-  - ./grafana.yaml
   - ./traefik.yaml
-  - ./k8s-at-home.yaml
-  - ./kubernetes-dashboard.yaml
-  - ./csi-driver-nfs.yaml
