--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -1,5 +1,4 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/helmrelease_v2beta1.json
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -27,63 +26,46 @@ spec:
   uninstall:
     keepHistory: false
   values:
-    extraInitContainers:
-      - name: init-db
-        image: ghcr.io/onedr0p/postgres-initdb:14.6
-        envFrom:
-          - secretRef:
-              name: grafana-secret
-    replicas: 3
-    rbac:
-      pspEnabled: false
-    testFramework:
-      enabled: false
+    replicas: 1
     # admin:
     #   existingSecret: grafana-secret
-    envFromSecrets:
-      - name: grafana-secret
+    ## sops --encrypt --in-place ./kubernetes/apps/monitoring/grafana/app/grafana.sops.yaml
+    ## sops --decrypt ./kubernetes/apps/monitoring/grafana/app/grafana.sops.yaml | kubectl apply -f -
+    admin:
+      existingSecret: grafana-admin-creds
     grafana.ini:
-      auth:
-        signout_redirect_url: https://auth.devbu.io/logout
-        oauth_auto_login: false
-      auth.generic_oauth:
-        enabled: true
-        name: Authelia
-        client_id: # Set by env vars
-        client_secret: # Set by env vars secret
-        auth_url: # Set by env vars
-        token_url: # Set by env vars
-        api_url: # Set by env vars
-        scopes: "openid profile email groups"
-        empty_scopes: false
-        login_attribute_path: preferred_username
-        groups_attribute_path: groups
-        name_attribute_path: name
-        use_pkce: true
-      auth.generic_oauth.group_mapping:
-        role_attribute_path: |
-          contains(groups[*], 'admins') && 'Admin' || contains(groups[*], 'people') && 'Viewer'
-        org_id: 1
+      server:
+        root_url: "https://grafana.${SECRET_DOMAIN}"
+      paths:
+        data: /var/lib/grafana/data
+        logs: /var/log/grafana
+        plugins: /var/lib/grafana/plugins
+        provisioning: /etc/grafana/provisioning
+      log:
+        mode: console
+      grafana_net:
+        url: https://grafana.net
       auth.basic:
-        enabled: false
-        # disable_login_form: false
+        #disable_login_form: false
+        enabled: true
       auth.anonymous:
         enabled: true
-        org_name: HomeOps
+        #org_name: HomeOps
         org_id: 1
         org_role: Viewer
-    dashboardProviders:
-      dashboardproviders.yaml:
-        apiVersion: 1
-        providers:
-          - name: "default"
-            orgId: 1
-            folder: ""
-            type: file
-            disableDeletion: false
-            editable: true
-            options:
-              path: /var/lib/grafana/dashboards/default
+
+    # dashboardProviders:
+    #   dashboardproviders.yaml:
+    #     apiVersion: 1
+    #     providers:
+    #       - name: "default"
+    #         orgId: 1
+    #         folder: ""
+    #         type: file
+    #         disableDeletion: false
+    #         editable: true
+    #         options:
+    #           path: /var/lib/grafana/dashboards/default
     datasources:
       datasources.yaml:
         apiVersion: 1
@@ -96,18 +78,8 @@ spec:
           - name: Prometheus
             type: prometheus
             access: proxy
-            url: http://thanos-query.monitoring.svc.cluster.local:9090
+            url: http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090/
             isDefault: true
-          - name: Loki
-            type: loki
-            access: proxy
-            url: http://loki-gateway.monitoring.svc.cluster.local:80
-          - name: Alertmanager
-            type: alertmanager
-            access: proxy
-            url: http://kube-prometheus-stack-alertmanager.monitoring.svc.cluster.local:9093
-            jsonData:
-              implementation: prometheus
     dashboards:
       default:
         # Ref: https://grafana.com/grafana/dashboards/7845
@@ -141,20 +113,24 @@ spec:
       enabled: true
     ingress:
       enabled: true
-      ingressClassName: nginx
+      ingressClassName: "traefik"
       annotations:
-        external-dns.home.arpa/enabled: "true"
-        hajimari.io/icon: simple-icons:grafana
+        hajimari.io/enable: "true"
+        hajimari.io/icon: "chart-scatter-plot-hexbin"
+        cert-manager.io/cluster-issuer: "letsencrypt-production"
+        traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
       hosts:
-        - &host grafana.devbu.io
+        - "grafana.${SECRET_DOMAIN}"
       tls:
         - hosts:
-            - *host
-    imageRenderer:
-      enabled: true
-      replicas: 3
-    persistence:
-      enabled: false
+            - "grafana.${SECRET_DOMAIN}"
+          secretName: "grafana.${SECRET_DOMAIN}"
+
+    # imageRenderer:
+    #   enabled: true
+    #   replicas: 3
+    # persistence:
+    #   enabled: false
     affinity:
       podAntiAffinity:
         preferredDuringSchedulingIgnoredDuringExecution:
