--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox.yaml
@@ -24,7 +24,7 @@ spec:
             pathType: Prefix
   tls:
     - hosts:
-        - *host
+        - "proxmox.${SECRET_DOMAIN}"
       secretName: "proxmox-${SECRET_DOMAIN/./-}-tls"
 ---
 apiVersion: v1
@@ -35,8 +35,8 @@ spec:
   ports:
     - name: https
       protocol: TCP
-      port: 8006
-      targetPort: https
+      port: 80
+      targetPort: 8006
 ---
 apiVersion: v1
 kind: Endpoints
