--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox.yaml
@@ -5,6 +5,7 @@ metadata:
   name: proxmox
   namespace: networking
   annotations:
+    hajimari.io/enable: "true"
     coredns.io/hostname: "proxmox.${SECRET_DOMAIN}"
     cert-manager.io/cluster-issuer: letsencrypt-production
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
