--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -36,6 +36,8 @@ spec:
       namespaceSelector:
         matchNames:
           - default
+          - networking
+          - monitoring
     podAnnotations:
       configmap.reloader.stakater.com/reload: hajimari-settings
     persistence:
