--- a/kubernetes/apps/networking/traefik-forward-auth/app/kustomization.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/app/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 namespace: networking
 resources:
   - ./helmrelease.yaml
-  - ./cert.yaml
+ # - ./cert.yaml
   #- ./ingress-route.yaml
   - ./ingress.yaml
   # - ./service.yaml
