--- a/kubernetes/apps/networking/kustomization.yaml
+++ b/kubernetes/apps/networking/kustomization.yaml
@@ -8,9 +8,9 @@ resources:
   - ./traefik/ks.yaml
   #- ./k8s-gateway/ks.yaml
   - ./metallb/ks.yaml
-  - ./traefik-forward-auth/ks.yaml
+  #- ./traefik-forward-auth/ks.yaml
   #- wildcard-certificate
   #- traefik-error-pages
   #- ./authelia/ks.yaml
   #- ./lldap/ks.yaml
-  #- ./authentik/ks.yaml
+  - ./authentik/ks.yaml
