--- a/kubernetes/apps/default/nginx/app/helm-release.yaml
+++ b/kubernetes/apps/default/nginx/app/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: nginx
+  name: nginx-site
   namespace: default
 spec:
   interval: 5m
